<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.handstands.spoked.PresetSentences"
    tools:showIn="@layout/activity_preset_sentences">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:id="@+id/presetList"
        android:layout_gravity="center_horizontal" />

    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/sentence"
            android:enabled="true"
            android:hint="@string/sentence_hint" />
			
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/speak_button"
		        android:id="@+id/speak"/>
			    <Button
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/stop_button"
			        android:id="@+id/stop"/>
    

		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/clear_button"
		        android:id="@+id/clear" />

		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/add_button"
		        android:id="@+id/add"/>
		</LinearLayout>
</LinearLayout>